
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int (* preemption_callback_register ) (int ,int ,void*) ;} ;
struct TYPE_5__ {TYPE_1__ vt; } ;
typedef TYPE_2__ vdp_t ;
typedef int VdpStatus ;
typedef int VdpPreemptionCallback ;
typedef int VdpDevice ;


 int CHECK_FUNC (int ) ;
 int PREEMPTION_CALLBACK_REGISTER ;
 int stub1 (int ,int ,void*) ;

VdpStatus vdp_preemption_callback_register(const vdp_t *vdp, VdpDevice device,
    VdpPreemptionCallback cb, void *ctx)
{
    CHECK_FUNC(PREEMPTION_CALLBACK_REGISTER);
    return vdp->vt.preemption_callback_register(device, cb, ctx);
}
